--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <nav>
-            <a href="#" id="logo">Coffe</a>
+            <a href="#" id="logo">Coffee</a>
             <ul>
                 <li><a href="www.twitter.com/harbaouighaith">Home</a></li>
                 <li><a href="#">About</a></li>
